--- a/index.html
+++ b/index.html
@@ -1,50 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT Tools - Handy online tools for developers</title>
-    <meta itemprop="name" content="IT Tools - Handy online tools for developers" />
-    <meta
-      name="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <meta
-      itemprop="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <link rel="author" href="humans.txt" />
-    <link rel="canonical" href="https://it-tools.tech" />
+      <meta charset="UTF-8" />
+      <link rel="icon" href="favicon.ico" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#18a058" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+      <title>IT工具箱 - 开发者常用实用在线工具</title>
+      <meta itemprop="name" content="IT工具箱 - 开发者常用实用在线工具" />
+      <meta
+              name="description"
+              content="为开发者和IT相关人员精心收集的一系列实用在线工具，界面友好，操作便捷。IT工具箱是一个免费开源的在线实用工具集合。"
+      />
+      <meta
+              itemprop="description"
+              content="为开发者和IT相关人员精心收集的一系列实用在线工具，界面友好，操作便捷。IT工具箱是一个免费开源的在线实用工具集合。"
+      />
 
-    <meta property="og:url" content="https://it-tools.tech/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="IT Tools - Handy online tools for developers" />
-    <meta
-      property="og:description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <meta property="og:image" content="https://it-tools.tech/banner.png?v=2" />
+      <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+      <link rel="mask-icon" href="safari-pinned-tab.svg" color="#18a058" />
+      <meta name="msapplication-TileColor" content="#da532c" />
+      <meta name="theme-color" content="#ffffff" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ittoolsdottech" />
-    <meta name="twitter:creator" content="@cthmsst" />
+      <meta property="og:url" content="https://dev.fktool.com/" />
+      <meta property="og:type" content="website" />
+      <meta property="og:title" content="IT工具箱 - 开发者常用实用在线工具" />
+      <meta
+              property="og:description"
+              content="为开发者和IT相关人员精心收集的一系列实用在线工具，界面友好，操作便捷。IT工具箱是一个免费开源的在线实用工具集合。"
+      />
+      <meta property="og:image" content="https://dev.fktool.com/banner.png?v=2" />
 
-    <meta name="twitter:title" content="IT Tools - Handy online tools for developers" />
-    <meta
-      name="twitter:description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <meta name="twitter:image" content="https://it-tools.tech/banner.png?v=2" />
-    <meta name="twitter:image:alt" content="IT Tools - Handy online tools for developers" />
-  </head>
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="IT工具箱 - 开发者常用实用在线工具" />
+      <meta
+              name="twitter:description"
+              content="为开发者和IT相关人员精心收集的一系列实用在线工具，界面友好，操作便捷。IT工具箱是一个免费开源的在线实用工具集合。"
+      />
+      <meta name="twitter:image" content="https://dev.fktool.com/banner.png?v=2" />
+      <meta name="twitter:image:alt" content="IT工具箱 - 开发者常用实用在线工具" />
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
