--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       />
       <meta name="twitter:image" content="https://dev.fktool.com/banner.png?v=2" />
       <meta name="twitter:image:alt" content="IT工具箱 - 开发者常用实用在线工具" />
+  </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
